@@ -25,9 +25,52 @@
 
 #import <Foundation/Foundation.h>
 #import "SCSound.h"
+#import <fcntl.h>
+#import <unistd.h>
+#import <sys/ioctl.h>
+#import <sys/soundcard.h>
 
+NSString *const SCSoundDidChangeNotification = @"SCSoundDidChangeNotification";
 
 @implementation SCSound
+
+- (id) init
+{
+  self = [super init];
+  mixer_fd = open("/dev/mixer", O_RDWR); 
+  if (mixer_fd < 0)
+  {
+    /* Cannot open mixer. Quit. */
+    [self dealloc];
+    return nil;
+  }
+  int status;
+  status  = ioctl(mixer_fd, SOUND_MIXER_READ_STEREODEVS, &stereodevs);
+  if (status < 0)
+  {
+    /* Cannot get stereo mask */
+    [self dealloc];
+    return nil;
+  }
+  status = ioctl(mixer_fd, SOUND_MIXER_READ_RECMASK, &recmask);
+  if (status < 0)
+  {
+    /* Cannot get record eask */
+    [self dealloc];
+    return nil;
+  }
+  return self;
+}
+
+- (void) dealloc
+{
+  if (mixer_fd > 0)
+  {
+    close(mixer_fd);
+    mixer_fd = -1;
+  }
+  [super dealloc];
+}
 
 /* Input/Output selection methods */
 
@@ -53,33 +96,73 @@
 
 /* Volumes methods */
 
+- (int) _volumeAtChannel: (int) channel
+{
+  int volume, status;
+  status = ioctl(mixer_fd, MIXER_READ(channel), &volume);
+  if (status < 0)
+  {
+    return -1; /* read failed */
+  }
+  if (stereodevs & (1 << channel))
+  {
+    return (((volume & 0xff00) >> 8) + (volume & 0x00ff)) / 2; /* stereo */
+  }
+  else
+  {
+    return volume; /* mono */
+  }
+}
+
+- (void) _setVolume: (int) v atChannel: (int) channel
+{
+  int volume, status;
+  if (stereodevs & (1 << channel))
+  {
+    volume = (v << 8) + v; /* stereo */
+  }
+  else
+  {
+    volume = v; /* mono */
+  }
+  status = ioctl(mixer_fd, MIXER_WRITE(channel), &volume);
+  if (status < 0)
+  {
+    /* write failed */
+  }
+  /* We post a distant notification to sync everything which uses it. */
+  NSNotificationCenter *nc = [NSDistributedNotificationCenter defaultCenter];
+  [nc postNotificationName: SCSoundDidChangeNotification
+                    object: nil];
+}
+
 - (int) inputVolume
 {
-	return -1;
+  return [self _volumeAtChannel: SOUND_MIXER_RECLEV];
 }
 
 - (void) setInputVolume: (int)volume
 {
-
+  return [self _setVolume: volume atChannel: SOUND_MIXER_RECLEV];
 }
 
 - (int) outputVolume
 {
-	return -1;
+  return [self _volumeAtChannel: SOUND_MIXER_VOLUME];
 }
 
 - (void) setOutputVolume: (int)volume
 {
-
+  return [self _setVolume: volume atChannel: SOUND_MIXER_VOLUME];
 }
 
 - (BOOL) silent
 {
-	return NO;
+  return ([self outputVolume] == 0);
 }
 - (void) setSilent: (BOOL)silent
 {
-
+  [self setOutputVolume: 0];
 }
 
 /* Alert sound methods */
