@@ -1,3 +1,7 @@
+2007-04-14  Yen-Ju Chen <yjchenx at gmail>
+
+	* Initial sound support.
+
 2007-02-18  Yen-Ju Chen <yjchenx at gmail>
 
 	* Format README in reStructuredText
